@@ -85,7 +85,7 @@ public class SystemButton extends TexturedButton{
 
             List<Component> list = new ArrayList<>();
 
-            list.add(Component.literal("§9" + ScreenHelper.PlanetScreenHelper.CATEGORY_TEXT.getString() + ": §b" + this.list.get(0)));
+            list.add(Component.literal("§9" + ScreenHelper.PlanetScreenHelper.CATEGORY_TEXT.getString() + ": §b" + this.list.getFirst()));
             list.add(Component.literal("§9" + ScreenHelper.PlanetScreenHelper.TYPE_TEXT.getString() + ": §3" + ScreenHelper.PlanetScreenHelper.SOLAR_SYSTEM_TEXT.getString()));
 
             graphics.renderComponentTooltip(Minecraft.getInstance().font, list, mouseX, mouseY);
